--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "张成林",
-      "email": "admin@jzeg.net"
+      "email": "admin@jzeg.org"
     }
   ],
   "require": {
